<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical">
    <ImageView
        android:contentDescription="@string/DesImg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_launcher_background"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/inWt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/edtWt"
        android:inputType="number"
        android:importantForAutofill="no" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/inHt"
        android:hint="@string/edtHt"
        android:inputType="numberDecimal"
        android:layout_marginBottom="10dp"
        android:autofillHints="no" />
    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btntxt"
        android:id="@+id/btn"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt"
        android:textSize="21sp"
        android:text="@string/result"
        android:textStyle="bold"
        android:layout_marginTop="11dp"
        />

</LinearLayout>